--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Velkani-admin</title>
-    <meta name="description" content="Specd" />
-    <meta name="author" content="admin" />
+    <meta name="description" content="Velkani Admin Dashboard" />
+    <meta name="author" content="Velkani Team" />
 
-    <meta property="og:title" content="admin-data-entry-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Velkani Admin Dashboard" />
+    <meta property="og:description" content="Velkani Store Administration Panel" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <script type="text/javascript">
       function googleTranslateElementInit() {
@@ -52,8 +46,6 @@
   <body>
     <div id="root"></div>
     <div id="google_translate_element"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
